--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-ORIGIN_ALLOWED = "http://loclahost:5500,http://loclahost:5550"
+ORIGIN_ALLOWED = "http://localhost:5500,http://localhost:5550"
 PORT = "8080"
 MONGODB_URI = "mongodb+srv://developer:EDadBkoCqBjXywzi@cluster0.cikumxo.mongodb.net/ecommerce?retryWrites=true&w=majority"
 JWT_SECRET = 't-Zy>e/}}*ong9`PQiZB_z!?y:C/G699'
