--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "mongoose-paginate-v2": "^1.7.4",
+    "nodemailer": "^6.9.10",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "twilio": "^4.22.0",
+    "uuid": "^9.0.1"
   }
 }
